--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Untitled148</title>
-    <link rel="shortcut icon" href="./assets/images/future.ico" />
+    <link rel="shortcut icon" href="./assets/future.ico" />
     <style>
       body {
-        background-color: #181425;
-      }
-      canvas {
-        border: 10px #e4a672 inset;
+        background-color: #4215d7;
       }
     </style>
   </head>
   <body>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/main.js"></script>
+    <script src="./src/scenes/loader.js"></script>
+    <script src="./src/scenes/start.js"></script>
+    <script src="./src/scenes/menu.js"></script>
+    <script src="./src/prefabs/menuPlanet.js"></script>
+    <script src="./main.js"></script>
     <div id="Untitled148"></div>
   </body>
 </html>
